analyses/VALIDATION/DD2_concordance/term
  File "../../scripts/cfs_dd2/filterHypervariableRecordsVCF.py", line 92
    print "PROBS: " np.flatnonzero(overProb)
                     ^
SyntaxError: invalid syntax
